Use new Java features